Firmware/XBee_WiFi/XBee_WiFi.cydsn/BUILD.log
--------------- Build Started: 12/04/2017 10:00:27 Project: XBee_WiFi, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0plus -mthumb -I. -IGenerated_Source\PSoC6 -IGenerated_Source\PSoC6\pdl\cmsis/include/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/ip/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/psoc63/include/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ -IGenerated_Source\PSoC6\pdl\middleware/ -Wa,-alh=.\CortexM0p\ARM_GCC_541\Debug/startup_psoc63_cm0plus.lst -g -D DEBUG -D CY_CORE_ID=0 -D CY_PSOC_CREATOR_USED=1 -D CY8C6347BZI_BLD53 -Wall -ffunction-sections -ffat-lto-objects -O0 -c armgcc\startup\startup_psoc63_cm0plus.S -o .\CortexM0p\ARM_GCC_541\Debug\startup_psoc63_cm0plus.o
arm-none-eabi-gcc.exe -mcpu=cortex-m0plus -mthumb -I. -IGenerated_Source\PSoC6 -IGenerated_Source\PSoC6\pdl\cmsis/include/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/ip/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/psoc63/include/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ -IGenerated_Source\PSoC6\pdl\middleware/ -Wa,-alh=.\CortexM0p\ARM_GCC_541\Debug/system_psoc63_cm0plus.lst -g -D DEBUG -D CY_CORE_ID=0 -D CY_PSOC_CREATOR_USED=1 -D CY8C6347BZI_BLD53 -Wall -ffunction-sections -ffat-lto-objects -O0 -c system_psoc63_cm0plus.c -o .\CortexM0p\ARM_GCC_541\Debug\system_psoc63_cm0plus.o
arm-none-eabi-gcc.exe -mcpu=cortex-m0plus -mthumb -I. -IGenerated_Source\PSoC6 -IGenerated_Source\PSoC6\pdl\cmsis/include/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/ip/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/psoc63/include/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ -IGenerated_Source\PSoC6\pdl\middleware/ -Wa,-alh=.\CortexM0p\ARM_GCC_541\Debug/cy_ipc_config.lst -g -D DEBUG -D CY_CORE_ID=0 -D CY_PSOC_CREATOR_USED=1 -D CY8C6347BZI_BLD53 -Wall -ffunction-sections -ffat-lto-objects -O0 -c cy_ipc_config.c -o .\CortexM0p\ARM_GCC_541\Debug\cy_ipc_config.o
arm-none-eabi-gcc.exe -mcpu=cortex-m0plus -mthumb -I. -IGenerated_Source\PSoC6 -IGenerated_Source\PSoC6\pdl\cmsis/include/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/ip/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/psoc63/include/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ -IGenerated_Source\PSoC6\pdl\middleware/ -Wa,-alh=.\CortexM0p\ARM_GCC_541\Debug/ipc_common.lst -g -D DEBUG -D CY_CORE_ID=0 -D CY_PSOC_CREATOR_USED=1 -D CY8C6347BZI_BLD53 -Wall -ffunction-sections -ffat-lto-objects -O0 -c ..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c -o .\CortexM0p\ARM_GCC_541\Debug\ipc_common.o
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c: In function 'ReadSharedVar':
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:50:23: error: 'Pin_CM0p_Reading_0' undeclared (first use in this function)
   #define PIN_READING Pin_CM0p_Reading_0
                       ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:77:17: note: in expansion of macro 'PIN_READING'
     Cy_GPIO_Set(PIN_READING);
                 ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:50:23: note: each undeclared identifier is reported only once for each function it appears in
   #define PIN_READING Pin_CM0p_Reading_0
                       ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:77:17: note: in expansion of macro 'PIN_READING'
     Cy_GPIO_Set(PIN_READING);
                 ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:77:5: error: too few arguments to function 'Cy_GPIO_Set'
     Cy_GPIO_Set(PIN_READING);
     ^
In file included from Generated_Source\PSoC6/project.h:25:0,
                 from ..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:42:
Generated_Source\PSoC6\pdl\drivers/peripheral/gpio/cy_gpio.h:786:22: note: declared here
 __STATIC_INLINE void Cy_GPIO_Set(GPIO_PRT_Type* base, uint32_t pinNum)
                      ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:82:18: warning: implicit declaration of function 'Cy_IPC_LOCK_Acquire' [-Wimplicit-function-declaration]
         rtnVal = Cy_IPC_LOCK_Acquire(MY_LOCKNUM);
                  ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:84:24: error: 'CY_IPC_LOCK_SUCCESS' undeclared (first use in this function)
         if ((rtnVal == CY_IPC_LOCK_SUCCESS) || (rtnVal == CY_IPC_LOCK_OUT_OF_RANGE)) break;
                        ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:84:59: error: 'CY_IPC_LOCK_OUT_OF_RANGE' undeclared (first use in this function)
         if ((rtnVal == CY_IPC_LOCK_SUCCESS) || (rtnVal == CY_IPC_LOCK_OUT_OF_RANGE)) break;
                                                           ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:96:22: warning: implicit declaration of function 'Cy_IPC_LOCK_Release' [-Wimplicit-function-declaration]
             rtnVal = Cy_IPC_LOCK_Release(MY_LOCKNUM);
                      ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:103:5: error: too few arguments to function 'Cy_GPIO_Clr'
     Cy_GPIO_Clr(PIN_READING);
     ^
In file included from Generated_Source\PSoC6/project.h:25:0,
                 from ..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:42:
Generated_Source\PSoC6\pdl\drivers/peripheral/gpio/cy_gpio.h:811:22: note: declared here
 __STATIC_INLINE void Cy_GPIO_Clr(GPIO_PRT_Type* base, uint32_t pinNum)
                      ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c: In function 'WriteSharedVar':
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:51:23: error: 'Pin_CM0p_Writing_0' undeclared (first use in this function)
   #define PIN_WRITING Pin_CM0p_Writing_0
                       ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:126:17: note: in expansion of macro 'PIN_WRITING'
     Cy_GPIO_Set(PIN_WRITING);
                 ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:126:5: error: too few arguments to function 'Cy_GPIO_Set'
     Cy_GPIO_Set(PIN_WRITING);
     ^
In file included from Generated_Source\PSoC6/project.h:25:0,
                 from ..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:42:
Generated_Source\PSoC6\pdl\drivers/peripheral/gpio/cy_gpio.h:786:22: note: declared here
 __STATIC_INLINE void Cy_GPIO_Set(GPIO_PRT_Type* base, uint32_t pinNum)
                      ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:133:24: error: 'CY_IPC_LOCK_SUCCESS' undeclared (first use in this function)
         if ((rtnVal == CY_IPC_LOCK_SUCCESS) || (rtnVal == CY_IPC_LOCK_OUT_OF_RANGE)) break;
                        ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:133:59: error: 'CY_IPC_LOCK_OUT_OF_RANGE' undeclared (first use in this function)
         if ((rtnVal == CY_IPC_LOCK_SUCCESS) || (rtnVal == CY_IPC_LOCK_OUT_OF_RANGE)) break;
                                                           ^
..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:152:5: error: too few arguments to function 'Cy_GPIO_Clr'
     Cy_GPIO_Clr(PIN_WRITING);
     ^
In file included from Generated_Source\PSoC6/project.h:25:0,
                 from ..\..\..\..\..\..\Users\mike.hord\Desktop\2.0_WW14_4\CE\CE216795\CE216795\CE216795_DualCoreSharedMemory.cydsn\ipc_common.c:42:
Generated_Source\PSoC6\pdl\drivers/peripheral/gpio/cy_gpio.h:811:22: note: declared here
 __STATIC_INLINE void Cy_GPIO_Clr(GPIO_PRT_Type* base, uint32_t pinNum)
                      ^
--------------- Build Failed: 12/04/2017 10:00:28 ---------------
